k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techtalk
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: techtalk
  name: kubetalk
  labels:
    app: kubetalk
spec:
  rules:
  - host: kubetalk.example.com
    http:
      paths:
      - backend:
          service:
            name: kubetalk
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: kubetalk
  namespace: techtalk
  labels:
    app: kubetalk
spec:
  selector:
    app: kubetalk
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: techtalk
  name: kubetalk
  labels:
    app: kubetalk
spec:
  selector:
    matchLabels:
      app: kubetalk
  strategy:
    type: Recreate
  replicas: 2
  template:
    metadata:
      labels:
        app: kubetalk
    spec:
      containers:
      - name: kubetalk
        image: cmillani/node-sample
        resources:
          requests:
            memory: "150Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
          name: kubetalk
